# 261RCOSE34101

./: .gitignore  README.md
Assignments/: 1.txt  2.txt
Assignments/3/: 3.txt  process_01.c  process_07.c
Assignments/4/: 4.txt  thread_05.c  thread_06.c
Assignments/5/: 5.txt
Assignments/5/assignment_1_1/: message_buffer.c
Assignments/5/assignment_1_2/: message_buffer_semaphore.c
Assignments/5/assignment_2/: client.c  server.c
CpuScheduler/: CMakeLists.txt
CpuScheduler/src/: another.c  another.h  color_codes.c  color_codes.h  color_codes_data.inc  cpu_scheduling_simulator.c  data_structures.c  data_structures.h  input_handler.c  input_handler.h  job.c  job.h  main.c  print_handler.c  print_handler.h  scheduling_methods.c  scheduling_methods.h  settings-long.h  settings.h  test.c
